# phoenix-channels-client

./: .gitignore  .tool-versions  Cargo.toml  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: aarch64-apple-ios-sim.yml  aarch64-apple-ios.yml  aarch64-apple-watchos-sim.yml  aarch64-linux-android.yml  apple-devices.yml  ci.yml  linux.yml  macos.yml  x86_64-apple-ios.yml  x86_64-linux-android.yml
src/: channel.rs  client.rs  ffi.rs  join_reference.rs  lib.rs  message.rs  observable_status.rs  phoenix_channels_client.udl  reference.rs  rust.rs  socket.rs  topic.rs  wasm_helpers.rs
src/channel/: listener.rs
src/ffi/: channel.rs  http.rs  io.rs  json.rs  message.rs  observable_status.rs  presence.rs  presences.rs  socket.rs  topic.rs  web_socket.rs
src/ffi/channel/: statuses.rs
src/ffi/http/: parse.rs
src/ffi/io/: error.rs
src/ffi/web_socket/: error.rs  protocol.rs
src/ffi/web_socket/protocol/: frame.rs
src/ffi/web_socket/protocol/frame/: coding.rs
src/rust/: channel.rs  join_reference.rs  message.rs  observable_status.rs  presence.rs  presences.rs  reference.rs  socket.rs
src/rust/channel/: listener.rs
src/rust/presences/: listener.rs
src/rust/socket/: listener.rs
src/socket/: listener.rs
tests/: integration_test.rs  uniffi.rs
tests/bindings/: simple.kts  simple.swift
tests/support/app/: Info.plist
tests/support/test_server/: .gitignore  .tool-versions  action.yml  mix.exs
tests/support/test_server/config/: config.exs
tests/support/test_server/lib/test_server/: application.ex  authorization.ex  channel.ex  endpoint.ex  presence.ex  secret.ex  socket.ex
tests/support/watchos/: linker_shim.sh
tests/support/watchos/app/: Info.plist
