[package]
name = "phoenix_channels_client"
version = "0.9.0"
rust-version = "1.64"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Elle Imhoff <Kronic.Deth@gmail.com>"]
description = "Provides an async-ready client for Phoenix Channels in Rust"
repository = "https://github.com/liveview-native/phoenix-channels"
homepage = "https://github.com/liveview-native/phoenix-channels"
documentation = "https://github.com/liveview-native/phoenix-channels"
categories = ["asynchronous", "web-programming:websocket"]
keywords = ["phoenix", "channels", "elixir"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[lib]
crate-type = [
    # Integration tests
    "lib",
    # Android
    "cdylib",
    # iOS
    "staticlib"
]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
nightly = []
native-tls = ["tokio-tungstenite/native-tls-vendored", "dep:native-tls"]
uniffi-build = ["uniffi/build", "uniffi/cli"]


[dependencies]
arc-swap = "1.7.0"
atomic-take = "1.1.0"
bytes = "1.6.0"
flexstr = { version = "0.9.2", features = ["serde"] }
futures = "0.3"
fxhash = "0.2"
httparse = "1.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["sync", "macros", "time" ] }
tokio-tungstenite = "0.21.0"
uniffi = { version = "0.27", features = ["tokio"] }
url = "2.5"
uuid = { version = "1.8.0", features = ["v4"] }
native-tls = { version = "0.2", features = ["vendored"], optional = true}

[dev-dependencies]
chrono = "0.4.31"
env_logger = "0.10"
uniffi = { version = "0.27", features = ["bindgen-tests", "tokio"]}
tokio = { version = "1.37", features = ["test-util"] }

[patch.crates-io]
# Work for https://github.com/sfackler/rust-native-tls/pull/285 hasn't been published to crates.io yet.
native-tls = { git = "https://github.com/sfackler/rust-native-tls", rev = "0b69ce6a3c4bfe973ede44f6862fc13f3f09c773" }
# work for https://github.com/kornelski/rust-security-framework/pull/190 hasn't been published to crates.io yet.
security-framework = { git = "https://github.com/kornelski/rust-security-framework/", rev = "54d905027e50ec4f0969824efa8e34581922a1f4" }
security-framework-sys = { git = "https://github.com/kornelski/rust-security-framework/", rev = "54d905027e50ec4f0969824efa8e34581922a1f4" }
