[package]
name = "phoenix_channels_client"
version = "0.9.0"
rust-version = "1.64"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Elle Imhoff <Kronic.Deth@gmail.com>"]
description = "Provides an async-ready client for Phoenix Channels in Rust"
repository = "https://github.com/liveview-native/phoenix-channels"
homepage = "https://github.com/liveview-native/phoenix-channels"
documentation = "https://github.com/liveview-native/phoenix-channels"
categories = ["asynchronous", "web-programming:websocket"]
keywords = ["phoenix", "channels", "elixir"]
license = "MIT"
readme = "README.md"
edition = "2021"

[lib]
crate-type = [
    # Integration tests
    "lib",
    # Android
    "cdylib",
    # iOS
    "staticlib"
]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio-tungstenite/connect"]
nightly = []
native-tls = ["tokio-tungstenite/native-tls-vendored", "dep:native-tls"]
uniffi-build = ["uniffi/build", "uniffi/cli"]
browser = ["tokio-tungstenite/js-connect", "getrandom/js", "ws_stream_wasm", "async_io_stream/tokio_io", "wasm-bindgen", "js-sys", "wasm-bindgen-futures", "gloo-timers", "web-time"]


[dependencies]
arc-swap = "1.7.0"
atomic-take = "1.1.0"
bytes = "1.7.0"
flexstr = { version = "0.9.2", features = ["serde"] }
futures = "0.3"
fxhash = "0.2"
httparse = "1.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["sync", "macros", "time" ] }
url = "2.5"
uuid = { version = "1.10.0", features = ["v4"] }
uniffi = { version = "0.28", features = ["tokio"] }
native-tls = { version = "0.2", features = ["vendored"], optional = true }
tokio-tungstenite = { version = "0.23.1", default-features = false, features = ["handshake", "stream"] }
cfg-if = "0.1"

getrandom = { version = "0.2", optional = true }
ws_stream_wasm = { version = "0.7.4", optional = true }
async_io_stream = { version = "0.3.3", optional = true }
web-time = { version = "1.1.0", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
js-sys = { version = "0.3.69", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }

[dev-dependencies]
chrono = "0.4.31"
env_logger = "0.11"
uniffi = { version = "0.28", features = ["bindgen-tests", "tokio"]}
tokio = { version = "1.39", features = ["full", "test-util"] }

[patch.crates-io]
# https://github.com/kornelski/rust-security-framework/pull/201
security-framework =     { git = "https://github.com/kornelski/rust-security-framework.git", rev = "ea683f291bb8dff51d3239e556c3236e09274c16" }
security-framework-sys = { git = "https://github.com/kornelski/rust-security-framework.git", rev = "ea683f291bb8dff51d3239e556c3236e09274c16" }

# https://github.com/servo/core-foundation-rs/pull/679
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", rev = "fb8fd65eef1b2ef247055e944cf258d53f2a517a" }

# https://github.com/rust-lang/socket2/pull/503
socket2 = { git = "https://github.com/QuentinPerez/socket2.git", rev = "ca3a93088857b40c27e98d1690f242a7ba8da4dc" }

#tokio-tungstenite = { git = "https://github.com/simlay/tokio-tungstenite.git", branch = "add-browser-wasm-support" }
tokio-tungstenite = { path = "../tokio-tungstenite/" }
tokio = { path = "../tokio/tokio/" }
