[package]
name = "phoenix_channels_client"
version = "0.9.1"
rust-version = "1.64"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Elle Imhoff <Kronic.Deth@gmail.com>"]
description = "Provides an async-ready client for Phoenix Channels in Rust"
repository = "https://github.com/liveview-native/phoenix-channels"
homepage = "https://github.com/liveview-native/phoenix-channels"
documentation = "https://github.com/liveview-native/phoenix-channels"
categories = ["asynchronous", "web-programming:websocket"]
keywords = ["phoenix", "channels", "elixir"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[lib]
crate-type = [
    # Integration tests
    "lib",
    # Android
    "cdylib",
    # iOS
    "staticlib"
]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
nightly = []
native-tls = ["tokio-tungstenite/native-tls-vendored", "dep:native-tls"]
uniffi-build = ["uniffi/build", "uniffi/cli"]


[dependencies]
arc-swap = "1.7.0"
atomic-take = "1.1.0"
bytes = "1.9.0"
flexstr = { version = "0.9.2", features = ["serde"] }
futures = "0.3"
fxhash = "0.2"
httparse = "1.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["sync", "macros", "time" ] }
tokio-tungstenite = "0.24.0"
uniffi = { version = "0.28.0", features = ["tokio"] }
url = "2.5"
uuid = { version = "1.13.1", features = ["v4"] }
native-tls = { version = "0.2", features = ["vendored"], optional = true}

[dev-dependencies]
chrono = "0.4.31"
env_logger = "0.11"
uniffi = { version = "0.28.0", features = ["bindgen-tests", "tokio"]}
tokio = { version = "1.43", features = ["full", "test-util"] }

[patch.crates-io]
# https://github.com/kornelski/rust-security-framework/pull/201
security-framework =     { git = "https://github.com/kornelski/rust-security-framework.git", rev = "ea683f291bb8dff51d3239e556c3236e09274c16" }
security-framework-sys = { git = "https://github.com/kornelski/rust-security-framework.git", rev = "ea683f291bb8dff51d3239e556c3236e09274c16" }

# https://github.com/servo/core-foundation-rs/pull/679
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", rev = "fb8fd65eef1b2ef247055e944cf258d53f2a517a" }
